# scoutpi-workbench

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
docs/agent/: chat-summary.md  notes.md
docs/interview/: DEMO_SCRIPT.md  README.md  RESUME_BULLETS.md
docs/scoutpi/: AGENT_TOOL_SKILL_BUILDER.md  BACKEND_PLUGIN_SDK.md  BROWSER_EVIDENCE_BRIDGE.md  CONTEXT_BRIDGE.md  DURABLE_AGENT_CHECKPOINTS.md  DURABLE_TRIGGERS_AND_DELEGATION.md  EVIDENCE_REVIEWER.md  MCP_COMPATIBILITY.md  PI_OPEN_SOURCE_ECOSYSTEM_REUSE_AUDIT.md  PI_PACKAGE_RELEASE.md  PI_RPC_HARNESS.md  RUNTIME_GOVERNANCE_AND_OBSERVABILITY.md  SCOUTPI_PI_EARTH_INVESTIGATION_RUNTIME.md  SPATIAL_CANVAS_RUNTIME.md  WORKBENCH_LOCALIZATION.md  WORKFLOW_COMPILER.md
examples/adapter-packs/: earth-engine-starter.json
examples/context/: candidates.json
examples/evidence/: browser-evidence.json
scripts/: runEarthWorkbench.mjs  seedExampleAdapters.ts  verifyPiPackage.mjs
tests/: backendSdk.test.ts  checkpoint.test.ts  contextBridge.test.ts  contextProvider.test.ts  earthWorkspace.test.ts  evaluationRuntime.test.ts  evidenceBridge.test.ts  evidenceReviewer.test.ts  governanceObservability.test.ts  i18n.test.ts  mapRuntime.test.ts  mcpServer.test.ts  piEcosystem.test.ts  piHarness.test.ts  runtimeTelemetry.test.ts  triggerRuntime.test.ts  workflowCompiler.test.ts
(+40 files in other folders)
