[project]
name = "scoutpi-earth-runtime"
version = "0.1.0"
description = "Typed Python execution worker for ScoutPi Earth Workbench"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.optional-dependencies]
gee = [
    "earthengine-api>=1.7.0",
]
pipeline = [
    "earthengine-api>=1.7.0",
    "geedim>=2.0.0",
    "geetools>=1.18.1",
]
workbench = [
    "earthengine-api>=1.7.0",
    "geemap>=0.36.0",
    "leafmap>=0.42.0",
]
climate = [
    "earthengine-api>=1.7.0",
    "wxee>=0.5.0",
]
full = [
    "earthengine-api>=1.7.0",
    "geedim>=2.0.0",
    "geetools>=1.18.1",
    "geemap>=0.36.0",
    "leafmap>=0.42.0",
    "wxee>=0.5.0",
]

[tool.uv]
package = false
